# decision-tree-demo

./: Cargo.toml  README.md  index.html
public/: iris.csv  iris.data  rice.csv  styles.css  wine.csv
src/: lib.rs  main.rs  tree.rs
