[package]
name = "dectree"
version = "0.1.0"
edition = "2021"
authors = ["NKID00 <this@nkid00.name>"]

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
csv = "1.3"
leptos-use = "0.13"
stylers = "0.3"
web-sys = { version = "0.3", features = ["Performance"] }
js-sys = "0.3"
rand = "0.8.5"
bimap = "0.6.3"
rand_chacha = "0.3.1"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
